--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "pizza",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.6.2"
+  },
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
